@@ -1,4 +1,9 @@
-2021-01-19 Albert Chu <chu11@llnl.gov>
+2022-01-25 Albert Chu <chu11@llnl.gov>
+
+	* man/ipmidetect.8.pre.in, man/ipmidetectd.8.pre.in: Correct out
+	of date command line options.
+
+2022-01-19 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/libcommon/ipmi-md2.h,
 	libfreeipmi/libcommon/ipmi-md2.c,
